<resources>
    <string name="app_name">GeoMark</string>
    <string name="preference_file_key">~7sr41[GASfXY|:</string>
    <string name="getIdFromSharedPreferences"><![CDATA[\"jgN4^]m?A%1Sv\"&\"]]></string>
    <string name="box">\@S-7u4K7:YH\"gh^</string>
    <string name="hintText">Выберете слои, которые будут отображаться на карте</string>

    <string-array name="titlesName">
        <item>Мои слои</item>
        <item>Все слои</item>
    </string-array>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="layersfragment">layersFragment</string>
    <string name="mapfragment">mapFragment</string>
    <string name="layerViewFragment">addNewLayerFragment</string>
    <string name="mapNameForUpperPanel">Карта</string>
    <string name="layersListNameForUpperPanel">Слои</string>
    <string name="change_description_text">Изменить описание</string>
    <string name="delete_layer_text">удалить слой</string>
    <string name="change_name_text">изменить название</string>
    <string name="change_image_text">изменить фото</string>
    <string name="editable">editable</string>
    <string name="admit_changes_text">применить изменения</string>
    <string name="none_editable">none_editable\n</string>
    <string name="change_text">изменить</string>
    <string name="cancel_text">отменить</string>
    <string name="admit_text">подтвердить</string>
    <string name="map_text">Карта</string>
    <string name="layers_text">Слои</string>
    <string name="text_description">Описание</string>
    <string name="text_map">Карта</string>
    <string name="text_my_layers">Мои слои</string>
    <string name="text_shared_layers">Общие слои</string>
    <string name="text_search">Поиск...</string>
    <string name="text_layer_name">Название слоя</string>
    <string name="text_save">сохранить</string>
    <string name="text_building_layer">Создание слоя</string>
    <string name="text_no_title">No title</string>
    <string name="set_name_attention">Имя должно содержать не менее 5 и не более 20 символов</string>
    <string name="text_add_mark">Добавить метку</string>
    <string name="text_name">Название</string>
    <string name="text_latitude">Широта</string>
    <string name="text_longitude">Долгота</string>
    <string name="text_trail">Маршрут</string>
    <string name="text_longitude_cannot_be_empty">Долгота не может быть пустой</string>
    <string name="text_longitude_have_to_be_between">Долгота должна быть между -180 и 180</string>
    <string name="text_latitude_cannot_be_empty">Широта не может быть пустой</string>
    <string name="text_latitude_have_to_be_between">Широта должна быть между -90 и 90</string>
    <string name="text_invalid_format">Неправильный формат</string>
    <string name="text_correct_input">Исправте входные данные перед сохранением</string>
    <string name="text_name_cannot_be_empty">Имя не может быть пустым</string>
    <string name="text_building_mark">Создание метки</string>
</resources>