<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/constraint_layout"
        android:backgroundTint="@color/white">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/app_bar_layout"
            android:backgroundTint="@color/light_bg_color"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:navigationIcon="@drawable/ic_arrow_back"
                android:id="@+id/tool_bar"

                app:menu="@menu/layer_change_app_bar_menu"

                app:titleTextColor="@color/black"
                app:navigationIconTint="@color/black"
                app:title="@string/text_building_layer">

            </com.google.android.material.appbar.MaterialToolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"

            android:background="@color/white"

            android:id="@+id/content_container"

            android:paddingHorizontal="20dp"

            app:layout_constraintTop_toBottomOf="@id/app_bar_layout"
            app:layout_constraintLeft_toLeftOf="parent">

            <ImageView
                android:id="@+id/image"
                android:layout_width="190dp"
                android:layout_height="190dp"

                android:src="@drawable/no_image_sign"

                android:scaleType="fitCenter"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/change_name_field"

                app:counterEnabled="true"
                app:counterMaxLength="20"
                android:textColorHint="@color/black"

                app:layout_constraintTop_toBottomOf="@id/image"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_layer_name"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/change_description_field"

                android:textColorHint="@color/black"

                app:layout_constraintTop_toBottomOf="@id/change_name_field"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toTopOf="@id/divider">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_description"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:orientation="horizontal"

                android:id="@+id/divider"

                app:dividerColor="@color/unfocused_element_color"

                android:layout_marginVertical="20dp"

                app:layout_constraintTop_toBottomOf="@id/change_description_field"
                app:layout_constraintBottom_toTopOf="@id/add_mark_button"
                app:layout_constraintLeft_toLeftOf="parent"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/add_mark_button"

                style="@style/addMarkButton"
                app:layout_constraintTop_toBottomOf="@id/divider"
                app:layout_constraintLeft_toLeftOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/marks_recycler_view_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"

                app:layout_constraintTop_toBottomOf="@+id/add_mark_button"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>